--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ a:visited{
   height: max-content;
   text-decoration: none;
 }
-#About{
+#About,
+#Proyects{
   padding-top: 80px;
 }
 .redes-nav{
@@ -36,7 +37,8 @@ a:visited{
   left: 60%;
   bottom: -150px;
 }
-.redes-nav ul li a > .icon{
+.redes-nav ul li a > .icon,
+.container-proyect ul li a > .icon{
   width: 30px;
   height: 30px;
   stroke: white;
@@ -48,6 +50,13 @@ a:visited{
 }
 .primary-menu{
   margin: 0 auto;
+}
+.nav-link:hover{
+  color: palevioletred !important;
+}
+.redes > li > a svg:hover{
+  stroke: rgba(235, 140, 172, 0.704);
+  transform: scale(1.1);
 }
 .bi{
   width: 30px;
@@ -72,22 +81,15 @@ a:visited{
   overflow: hidden;
   filter: blur();
 }
-.about > img::before{
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 999;
-  background-color: rgb(233, 0, 0);
-}
-.about-text{
+.about-Subtitle,
+.proyects-Subtitle{
   width: max-content;
   position: relative;
   font-size: 2rem;
+  color: white;
 }
-.about-text::before{
+.about-Subtitle::before,
+.proyects-Subtitle::before{
   content: '';
   width: 300px;
   height: 1px;
@@ -95,11 +97,15 @@ a:visited{
   position: absolute;
   top: 60%;
   left: 110%;
+}
 
+#About .text{
+  font-size: 1.2rem;
+  margin: 30px 0;
 }
 .nav-link.active,
 .active{
-  color: palevioletred !important;
+  color: #d87093c6 !important;
   text-decoration: underline;
 }
 .hi{
@@ -108,6 +114,18 @@ a:visited{
 .text{
   font-size: 1.5rem;
 }
+
+#Proyects img{
+  filter: grayscale(47%) sepia(100%) brightness(93%) hue-rotate(263deg) saturate(344%) opacity(83%) contrast(116%) invert(6%);
+-webkit-filter: grayscale(47%) sepia(100%) brightness(93%) hue-rotate(263deg) saturate(344%) opacity(83%) contrast(116%) invert(6%);
+-moz-filter: grayscale(47%) sepia(100%) brightness(93%) hue-rotate(263deg) saturate(344%) opacity(83%) contrast(116%) invert(6%);
+  transition: all .2s linear;
+}
+#Proyects img:hover{
+  filter: none;
+}
+
+
 @media  (min-width: 870px){
   header{
     padding: 0px 15px;
